<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options.
-->

<resources>

    <!-- Simple strings. -->
    <string name="skeleton_app">Clipper Card Mobile</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>

    <!-- This is a complex string containing style runs. -->
    <string name="main_label">Hello <u>th<ignore>e</ignore>re</u>, <i>you</i><b>Activity</b>!</string>
    <string name="title_activity_home">Clipper Card <i>Mobile</i></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_current_balance">My Clipper Card</string>
    <string name="cBWelcomeMessage">Your current balance is <b>$36.00</b>.</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Clipper Card <i>Mobile</i></string>
    <string name="card_account"><b>Card Account <i>#12345678</i></b></string>
    <string name="card_account_balance"><b>$36.00</b></string>
    <string name="card_account_balance_timestamp">as of TODAY at 3:33 PM</string>

    <!-- Reload Activity -->
    <string name="title_activity_reload">Clipper Card <i>Mobile</i></string>
    <string name="reload_amount_header"><u>Reload Amount</u></string>
    <string name="reload_payment_header"><u>Payment</u></string>
    <string name="payment_options_prompt">Choose a Payment Method</string>

    <string-array name="payment_options_array">
        <item>Credit Card</item>
        <item>Bank Account</item>
        <item>PayPal</item>
        <item>Commuter-Card</item>
        <item>WageWorks Commuter System</item>
    </string-array>

    <!-- Tag On Activity -->
    <string name="title_activity_tag_on">Clipper Card <i>Mobile</i></string>
    <string name="current_station_details_header">You are currently at</string>
    <string name="current_station_details"><b><i>Santa Clara Caltrain Station</i></b></string>
    <string name="tag_on_message">Please tag your Clipper Card to the nearest Clipper Card Reader.</string>
    <string name="tag_on_completed_message">Done!</string>
    <string name="tag_on_error_message">Problems tagging on?</string>

    <!-- Transaction History Activity -->
    <string name="title_activity_transaction_history">Clipper Card <i>Mobile</i></string>
    
    <!--  Tag On Error Activity -->
    <string name="title_activity_tag_on_error">Clipper Card <i>Mobile</i></string>
    <string name="transit_options_prompt">Choose Your Transit</string>
        <string-array name="transit_options_array">
        <item>AC Transit</item>
        <item>Bay Area Rapid Transit</item>
        <item>Caltrain</item>
        <item>Golden Gate Transit</item>
        <item>SF Muni</item>
        <item>SamTrans</item>
        <item>VTA</item>
    </string-array>
    
    <string name="destination_options_prompt">Choose Destination</string>
    <string-array name="destination_options_array">
        <item>Menlo Park</item>
        <item>Palo Alto</item>
        <item>Mountain View</item>
        <item>Sunnyvale</item>
        <item>Santa Clara</item>
        <item>San Jose Diridon</item>
    </string-array>
    
    <string name="manual_fare_payment_message">Fare payment $5.00 will be manuallly deducted from your Clipper Card.</string>

</resources>