<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/clipper_card_tag_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/card_account_last_updated"
        android:layout_below="@+id/card_account"
        android:layout_marginTop="20sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/card_account"
        android:cropToPadding="false"
        android:src="@drawable/clipper_card_tag_here" />

    <TextView
        android:id="@+id/card_account_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clipper_card_tag_here"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="@string/card_account_balance"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_account_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_account_balance"
        android:layout_centerHorizontal="true"
        android:text="@string/card_account_balance_timestamp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/transaction_history_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="Transaction History"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reload_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/transaction_history_button"
        android:layout_alignLeft="@+id/transaction_history_button"
        android:layout_marginBottom="19dp"
        android:text="Reload"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reload_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/card_account"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>